defined a GenericObjectTreeView